--- a/addressBook/Gemfile
+++ b/addressBook/Gemfile
@@ -13,6 +13,7 @@ gem "sprockets-rails"
 #gem "sqlite3", "~> 1.4"
 gem 'pg', '~> 1.4', '>= 1.4.5'
 
+gem 'jquery-rails'
 # Use the Puma web server [https://github.com/puma/puma]
 gem "puma", "~> 5.0"
 
